--- a/src/data/h1/tags/wind.yml
+++ b/src/data/h1/tags/wind.yml
@@ -2,10 +2,16 @@ name: wind
 id: wind
 invaderStructName: Wind
 comments:
-  md: ...
+  md: |
+    Describes the speed and variation of wind in a
+    [BSP cluster][scenario_structure_bsp#clusters-and-cluster-data], affecting
+    local [point_physics][] like [flags][flag] and [weather][weather_particle_system].
   fields:
     - name: velocity
-      md: ...
+      md: |
+        Upper and lower bounds for wind speed. Technically, this is not a true
+        "velocity" because it is not a vector; wind direction is set in the BSP's
+        weather palettes.
     - name: variation area
       md: ...
     - name: local variation weight
