Add missing reclaimer usage in tools YAML

--- a/src/data/h1/tools.yml
+++ b/src/data/h1/tools.yml
@@ -457,6 +457,7 @@ workflows:
       - Mozzarilla
       - invader-edit-qt
       - OS_Guerilla
+      - Reclaimer
     edit:
       - actor
       - actor_variant
