--- a/build-config.json
+++ b/build-config.json
@@ -6,7 +6,7 @@
       "./src/content/**/readme.md",
       "./src/data/**/*.yml"
     ],
-    "srcResources": "./src/content/**/*.@(jpg|jpeg|png|gif)",
+    "srcResources": "./src/content/**/*.@(jpg|jpeg|png|gif|ms)",
     "srcDiagrams": "./src/content/**/*.@(dot|neato|fdp|sfdp|twopi|circo)",
     "srcContentBase": "./src/content",
     "srcStaticAssets": "./src/@(assets)/**/*.@(jpg|jpeg|png|gif|ttf|js)",
