--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "htm": "^3.0.4",
     "minisearch": "^2.3.1",
+    "multer": "^1.4.2",
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
