--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://c20.reclaimers.net",
   "dependencies": {
+    "aws-sdk": "^2.720.0",
     "express": "^4.17.1",
     "htm": "^3.0.4",
     "minisearch": "^2.3.1",
