Document what shader_transparent_generic is and add more Mozz workflows/conversions

--- a/src/data/h1/tags/shader_transparent_generic.yml
+++ b/src/data/h1/tags/shader_transparent_generic.yml
@@ -3,7 +3,7 @@ id: sotr
 parentName: shader
 invaderStructName: ShaderTransparentGeneric
 comments:
-  md: ...
+  md: A transparent shader type supported on classic Xbox only.
   fields:
     - name: numeric counter limit
       md: ...
