Only sync to s3 if build succeeding

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,4 +13,5 @@ phases:
       - npm run build
   post_build:
     commands:
+      - bash -c "if [ /"$CODEBUILD_BUILD_SUCCEEDING/" == /"0/" ]; then exit 1; fi"
       - aws s3 sync --delete ./dist s3://reclaimers-wiki-files/
