General content pass: add misc tips, new pages, reword old content, improve CSS for code blocks

--- a/src/data/h1/tags/detail_object_collection.yml
+++ b/src/data/h1/tags/detail_object_collection.yml
@@ -2,7 +2,9 @@ name: detail_object_collection
 id: dobc
 invaderStructName: DetailObjectCollection
 comments:
-  md: ...
+  md: >
+    Determines the mix and appearance of small 2D detail objects like grass,
+    which are painted onto a [BSP][scenario_structure_bsp] in [Sapien][].
   fields:
     - name: collection type
       md: ...
