--- a/src/data/h1/tags/globals.yml
+++ b/src/data/h1/tags/globals.yml
@@ -372,7 +372,7 @@ comments:
         - name: powerup
           md: ...
     - name: multiplayer information
-      md: ...
+      md: This block is stripped by [Tool][] when compiling singleplayer or UI maps.
       fields:
         - name: flag
           md: ...
@@ -461,7 +461,7 @@ comments:
         - name: night vision on off effect
           md: ...
     - name: falling damage
-      md: ...
+      md: This block is stripped by [Tool][] when compiling UI maps.
       fields:
         - name: harmful falling distance
           md: ...
