--- a/src/data/h1/tags/sound_looping.yml
+++ b/src/data/h1/tags/sound_looping.yml
@@ -10,7 +10,7 @@ comments:
         - name: deafening to ais
           md: ...
         - name: not a loop
-          md: ...
+          md: Prevents the sound from looping. When played with `sound_looping_start`, it will play only once.
         - name: stops music
           md: ...
     - name: zero detail sound period
