Add a kill volumes page; add more tag descriptions

--- a/src/data/h1/tags/device.yml
+++ b/src/data/h1/tags/device.yml
@@ -3,7 +3,7 @@ id: devi
 parentName: object
 invaderStructName: Device
 comments:
-  md: ...
+  md: Parent tag for devices, controlled objects which have powered on/off states.
   fields:
     - name: device flags
       md: ...
