--- a/src/data/h1/tags/device_light_fixture.yml
+++ b/src/data/h1/tags/device_light_fixture.yml
@@ -3,5 +3,5 @@ id: lifi
 parentName: device
 invaderStructName: DeviceLightFixture
 comments:
-  md: ...
+  md: Used for dynamically toggled light sources or decorate lighting objects.
   fields: []
